Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/failover/FailOver03.out
FailOver03.java:10:1: compiler.err.cyclic.inheritance: Test
1 error
